[package]
name = "cp-rs"
version = "0.2.3"
edition = "2021"
authors = ["TecTrixer <tonihoevedes@gmail.com>"]
license = "MIT"
description = "Competitive programming library, especially for AoC"
documentation = "https://docs.rs/cp-rs"
repository = "https://github.com/tectrixer/cp-rs"
keywords = ["competitive", "io", "input-handling", "algorithms"]

[dependencies]
radix_fmt = "1.0.0"
regex = "1"
md5 = "0.7.0"

