[package]
name = "cp-rs"
version = "0.3.0"
edition = "2021"
authors = ["TecTrixer <tonihoevedes@gmail.com>"]
license = "MIT"
description = "Competitive programming library, especially for AoC"
documentation = "https://docs.rs/cp-rs"
repository = "https://github.com/tectrixer/cp-rs"
keywords = ["competitive", "io", "input-handling", "algorithms"]

[dependencies]
radix_fmt = "1.0.0"
regex = "1"
md5 = "0.7.0"
cached = "0.40.0"
rug = "1.18.0"

